# Prompter

./: .gitignore  LICENSE  README.md  documentation.md  gaps_to_be_fixed.md  index.html  package-lock.json  package.json  prd_product_requirements.md  tailwind.config.js  technical_specification.md  use_case_definition.md
design_docs/: 00_README.md  01_System_Architecture_Design.md  02_High_Level_Design.md  03_Low_Level_Design.md  04_Database_Design.md  05_API_Design.md  06_Security_Design.md  07_Deployment_Design.md  08_Test_Strategy.md  09_Sequence_Diagrams.md  10_Class_Diagram.md
docs/superpowers/specs/: 2026-06-17-promptopt-mvp-design.md  2026-06-19-provider-framework-plan.md
framework_packs/: ape.json  care.json  create.json  era.json  race.json  rise.json  roses.json  spark.json  tag.json  trace.json
src/: App.tsx  Onboarding.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/framework_packs/: ape.json  create.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  hotkey.rs  lib.rs  main.rs  overlay.rs  replacement.rs  types.rs
src-tauri/src/accessibility/: mod.rs  platform.rs  stub.rs  win.rs
src-tauri/src/db/: mod.rs
src-tauri/src/engine/: frameworks.rs  mod.rs
src-tauri/src/providers/: anthropic.rs  gemini.rs  keys.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs
src/lib/: tauri.ts
src/overlay/: OverlayApp.tsx
