[package]
name = "prompter"
version = "0.1.0"
description = "Local-first, cross-platform prompt optimization overlay."
authors = ["Prompter"]
edition = "2021"

[lib]
name = "prompter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-ico", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
async-trait = "0.1"
async-stream = "0.3"
minijinja = "2"
similar = "2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "1"
anyhow = "1"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = "3"
aes-gcm = "0.10.3"
rand = "0.10.1"
sha2 = "0.11.0"
machine-uid = "0.6.0"

[target.'cfg(windows)'.dependencies]
uiautomation = "0.16"
enigo = "0.6"

[features]
default = []
